# podgen

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md
example/: CMakeLists.txt  include.convert.hpp  include.pod.hpp  main.cpp  test.capnp  test.convert.cpp  test.pod.hpp
include/: defs.hpp  pod.capnp  pod.hpp.tmpl  pod_convert.cpp.tmpl  pod_convert.hpp.tmpl  timestamp.convert.hpp
src/: PodGenerator.cpp  PodGenerator.hpp  main.cpp  pod.capnp.c++  pod.capnp.h  reserved_words.hpp  schema.cpp  schema.hpp
test/: CMakeLists.txt  include.capnp  include.convert.cpp  podgen_test.cpp  test.capnp  test.convert.hpp  test_simple.hpp  vector.convert.cpp
